fix(dock): auto-hide stucked state caused by previews popover

--- a/src/static/themes/default/styles/weg.css
+++ b/src/static/themes/default/styles/weg.css
@@ -265,7 +265,7 @@
 .weg-item-preview-container {
   padding: 10px;
   border-radius: 10px;
-  background-color: var(--color-gray-100);
+  background-color: var(--color-gray-75);
 
   .weg-item-display-name {
     white-space: nowrap;
